setuptools hinzugefügt und requirements.txt für Python 3.13 kompatibel gemacht

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,24 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-python-multipart==0.0.6
-pyaudio==0.2.14
-soundfile==0.12.1
-librosa==0.10.1
-pydub==0.25.1
-mutagen==1.47.0
-numpy==1.24.3
-scipy==1.11.4
-websockets==12.0
-aiofiles==23.2.1
+# Build-Tools (müssen zuerst installiert werden)
+setuptools>=65.0.0
+wheel>=0.40.0
+
+# Web-Framework
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+python-multipart>=0.0.6
+websockets>=12.0
+aiofiles>=23.2.0
+
+# Audio-Verarbeitung
+pyaudio>=0.2.14
+soundfile>=0.12.0
+librosa>=0.10.0
+pydub>=0.25.0
+
+# Metadaten
+mutagen>=1.47.0
+
+# Wissenschaftliche Bibliotheken
+numpy>=1.24.0
+scipy>=1.11.0
 
